--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,24 +5,8 @@ color: black
 style: center
 ---
 
-### *whoa, hey an open-source*
-{: .text-purple}
+# coala - Static Code Analysis Made Simple
 
-<span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
-  <i class="fa fa-circle fa-stack-2x text-white"></i>
-  <i class="fa fa-bicycle fa-stack-1x text-orange"></i>
-</span>
-
-# single-page jekyll theme
-{: .text-purple}
-
-
-…it's focused on delivering information quickly, easily, configurably, and stylishly!
-
-Want to make a single-page site to show off something cool? Go [fork me on github!](https://github.com/t413/SinglePaged)
-
-<span id="forkongithub">
-  <a href="{{ site.source_link }}" class="bg-blue">
-    Fork me on GitHub
-  </a>
-</span>
+coala is a simple COde AnaLysis Application. Its goal is to make static code
+analysis easy while remaining completely modular and therefore extendable and
+language independent.
