--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -7,21 +7,15 @@ fa-icon: toggle-on
 
 # Get It!
 
-`sudo pip3 install coala`
+### `sudo pip3 install coala`
 
 -------------------------
 
 # Try It!
 
-`coala --files=yourproject/\\*\\*/\\*.\\(c\\|html\\|whateveryouwant\\) --bears=SpaceConsistencyBear -s`
+### `coala --files=yourproject/\\*\\*/\\*.\\(c\\|html\\|whateveryouwant\\) --bears=SpaceConsistencyBear -s`
 
-Follow the instructions. Your configuration will be automatically saved to the `.coafile` in the current directory.
-
--------------------------
-
-# Use It!
-
-It's as simple as that: `coala` - if you already have the config.
+### Follow the instructions. Your configuration will be automatically saved to the `.coafile` in the current directory.
 
 -------------------------
 
