--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -7,6 +7,6 @@ fa-icon: check-square-o
 
 ### Lot's of work is repeated!
 
-Every static code analysis has a new user interface, a new API.
+#### Every static code analysis has a new user interface, a new API.
 
 # coala unifies 'em all!
