--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -21,7 +21,4 @@ fa-icon: toggle-on
 
 # Commit It!
 
-```
-git add .coafile
-git commit -m "Add coala configuration"
-```
+### `git add .coafile && git commit -m "Add coala configuration"`
