--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -13,7 +13,7 @@ fa-icon: toggle-on
 
 # Try It!
 
-### `coala --files=yourproject/\\*\\*/\\*.\\(c\\|html\\|whateveryouwant\\) --bears=SpaceConsistencyBear -s`
+### `cd project && coala --files=\*\*/\*.arbitrary --bears=SpaceConsistencyBear -s`
 
 ### Follow the instructions. Your configuration will be automatically saved to the `.coafile` in the current directory.
 
