--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -11,3 +11,7 @@ style: center
 #### Every static code analysis has a new user interface, a new API.
 
 # coala unifies 'em all!
+
+coala provides user interaction. You can use it for any language
+as well as write analysis routines for it for anything - even
+english text.
