--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -6,6 +6,8 @@ fa-icon: play
 style: center
 ---
 
+What your developers have to know:
+
 # Dead Simple: `coala`
 
 ### Right where your `.coafile` lies.
