--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -6,7 +6,7 @@ fa-icon: question
 style: center
 ---
 
-### Lot's of work is repeated!
+### Lots of work is repeated!
 
 #### Every static code analysis has a new user interface, a new API.
 
