--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -8,6 +8,6 @@ style: center
 
 What your developers have to know:
 
-# Dead Simple: `coala`
+# Just Execute `coala`
 
 ### Right where your `.coafile` lies.
