example: make save explicit

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -14,7 +14,7 @@ style: center
 
 # Try It!
 
-### `cd project && coala --files=\*\*/\*.arbitrary --bears=SpaceConsistencyBear -s`
+### `cd project && coala --files=\*\*/\*.arbitrary --bears=SpaceConsistencyBear --save`
 
 ### Follow the instructions. Your configuration will be automatically saved to the `.coafile` in the current directory.
 
