Tell the readers that we use python3!

--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -15,3 +15,5 @@ style: center
 coala provides user interaction. You can use it for any language
 as well as write analysis routines for it for anything - even
 english text.
+
+#### And it's written in awesome python3!
