Be a bit more non-confusing

--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -13,7 +13,7 @@ style: center
 # coala unifies 'em all!
 
 coala provides user interaction. You can use it for any language
-as well as write analysis routines for it for anything - even
-english text.
+as well as write analysis routines for everything - even
+grammar-checking for english text!
 
 #### And it's written in awesome python3!
