--- a/_posts/2000-01-08-donate.md
+++ b/_posts/2000-01-08-donate.md
@@ -13,4 +13,4 @@ use upstream by code mostly written in our freetime and pay servers out of our
 own pocket. Any donation is deeply appreciated and helps us focusing on even
 better code.
 
-## For single amount donations contact <lasse.schuirmann@gmail.com> or consider sponsoring a GitHub issue through <http://bountysource.com/>.
+## For single amount donations contact <lasse.schuirmann@gmail.com> or consider sponsoring a GitHub issue through <https://www.bountysource.com/teams/coala/>.
