--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -11,3 +11,5 @@ What your developers have to know:
 # Just Execute `coala`
 
 ### Right where your `.coafile` lies.
+
+And of course, coala works on Linux, Windows and Mac! Just make sure to use Python 3.
