--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -1,5 +1,5 @@
 ---
-title: "Why"
+title: "why"
 bg: blue
 color: white
 fa-icon: question
@@ -8,12 +8,8 @@ style: center
 
 ### Lots of work is repeated!
 
-#### Every static code analysis has a new user interface, a new API.
+### Every static code analysis has a new user interface, a new API.
 
 # coala unifies 'em all!
 
-coala provides user interaction. You can use it for any language
-as well as write analysis routines for everything - even
-grammar-checking for english text!
-
-#### And it's written in awesome python3!
+### coala provides user interaction. You can use it for any language as well as write analysis routines for everything - even grammar-checking for english text!
