format and text

--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -6,10 +6,8 @@ fa-icon: question
 style: center
 ---
 
-### Lots of work is repeated!
-
-### Every static code analysis has a new user interface, a new API.
+### Every static code analysis has a new user interface and other duplicated parts.
 
 # coala unifies 'em all!
 
-### coala provides user interaction. You can use it for any language as well as write analysis routines for everything - even grammar-checking for english text!
+### coala provides a user and a developer interface, letting developers focus on logic only and users focus on content. coala is fully language independent and any analysis routine can be used for as many languages as it is fit for.
