--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -6,10 +6,10 @@ fa-icon: play
 style: center
 ---
 
-What your developers have to know:
+### What your developers have to know:
 
 # Just Execute `coala`
 
 ### Right where your `.coafile` lies.
 
-And of course, coala works on Linux, Windows and Mac! Just make sure to use Python 3.
+#### And of course, coala works on **Linux**, **Windows** and **Mac**! Just make sure to use **Python 3**.
