--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -7,8 +7,4 @@ style: center
 
 # coala - Static Code Analysis Made Simple
 
-coala is a simple COde AnaLysis Application. Its goal is to make static code
-analysis easy while remaining completely modular and therefore extendable and
-language independent.
-
-### coala is written with a lowercase c!
+### coala is a simple COde AnaLysis Application. Its goal is to make static code analysis easy while remaining completely modular and therefore extendable and language independent.
