More Info: Add planet URL

--- a/_posts/2000-01-06-moreinfo.md
+++ b/_posts/2000-01-06-moreinfo.md
@@ -5,4 +5,6 @@ fa-icon: book
 color: white
 ---
 
-# Just visit <http://docs.coala-analyzer.org/>
+# Visit our documentation at <http://docs.coala-analyzer.org/>
+
+## ...or checkout the latest coala related news on <http://planet.coala-analyzer.org>
