Add GitMate note

--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -12,4 +12,8 @@ style: center
 
 ### Right where your `.coafile` lies.
 
-#### And of course, coala works on **Linux**, **Windows** and **Mac**! Just make sure to use **Python 3**.
+And of course, coala works on **Linux**, **Windows** and **Mac**! Just make sure
+to use **Python 3**.
+
+If you want to use coala for automatically review pull requests, consider using
+[GitMate](http://gitmate.com/). Please mind that GitMate is a prototype.
