add tell us what you think

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -23,3 +23,9 @@ style: center
 # Commit It!
 
 ### `git add .coafile && git commit -m "Add coala configuration"`
+
+-------------------------
+
+# Tell Us What You Think!
+
+### Simply join our channel at <https://gitter.im/coala-analyzer/coala>! We'd love to speak to you!
