static code analysis -> code analysis

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,6 +5,6 @@ color: black
 style: center
 ---
 
-# coala - Static Code Analysis Made Simple
+# coala - Code Analysis Made Simple
 
-### coala is a simple COde AnaLysis Application. Its goal is to make static code analysis easy while remaining completely modular and therefore extendable and language independent.
+### coala is a simple COde AnaLysis Application. Its goal is to make code analysis easy while remaining completely modular and therefore extendable and language independent.
