--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,6 +5,7 @@ color: black
 style: center
 ---
 
-# coala - Code Analysis Made Simple
+# coala - COde AnaLysis Application
 
-### coala is a simple COde AnaLysis Application. Its goal is to make code analysis easy while remaining completely modular and therefore extendable and language independent.
+Our goal is to make code analysis easy while remaining completely modular,
+extensible and language independent.
