--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -7,5 +7,4 @@ style: center
 
 # coala - COde AnaLysis Application
 
-Our goal is to make code analysis easy while remaining completely modular,
-extensible and language independent.
+### Our goal is to make code analysis easy while remaining completely modular, extensible and language independent.
