--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -8,6 +8,6 @@ style: center
 
 ### Every static code analysis has a new user interface and other duplicated parts.
 
-# coala unifies 'em all!
+# coala unifies those.
 
 ### coala provides a user and a developer interface, letting developers focus on logic only and users focus on content. coala is fully language independent and any analysis routine can be used for as many languages as it is fit for.
