--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -10,4 +10,6 @@ style: center
 
 # coala unifies those.
 
-### coala provides a user and a developer interface, letting developers focus on logic only and users focus on content. coala is fully language independent and any analysis routine can be used for as many languages as it is fit for.
+### coala provides a user and a developer interface, letting developers focus on logic only and users focus on content.
+
+### coala is fully language independent and any analysis routine can be used for as many languages as it is fit for.
