why: phrasing (again...)

--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -8,7 +8,7 @@ style: center
 
 ### Every static code analysis has a new user interface and other duplicated parts.
 
-# coala unifies those.
+# coala unifies code analysis.
 
 ### coala provides a user and a developer interface, letting developers focus on logic only and users focus on content.
 
