--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -10,11 +10,11 @@ style: center
 
 ### `sudo pip3 install coala --pre`
 
-At the current stage of the project, we recommend installing the current
-prerelease by using the `--pre` flag like indicated above because of the huge
-advances the project does every day. We go to great lengths to ensure our master
-branch is stable at every time on all platforms. If you still hit problems, try
-the tutorial without the `--pre` flag and drop us a bug report!
+Because of the huge advances the project does every day, we recommend installing
+the current prerelease by using the `--pre` flag like indicated above . We go to
+great lengths to ensure our master branch is stable at every time on all
+platforms. If you still hit problems, try the tutorial without the `--pre` flag
+and drop us a bug report!
 
 -------------------------
 
