--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -22,7 +22,7 @@ and drop us a bug report!
 
 ### `cd project && coala --files=\*\*/\*.c --bears=ClangBear,IndentBear --save`
 
-### Follow the instructions. Your configuration will be automatically saved to the `.coafile` in the current directory.
+### Your configuration will be automatically saved to the `.coafile` in the current directory. Use `coala -A` to see what bears are available.
 
 -------------------------
 
