Add twitter note

--- a/_posts/2000-01-06-moreinfo.md
+++ b/_posts/2000-01-06-moreinfo.md
@@ -7,4 +7,4 @@ color: white
 
 # Visit our documentation at <http://docs.coala-analyzer.org/>
 
-## ...or checkout the latest coala related news on <http://planet.coala-analyzer.org>
+## ...or checkout the latest coala related news on <http://planet.coala-analyzer.org> and <https://twitter.com/coala_analyzer>.
