details: Use python as example
that's better because Indent/Clang might not be available on the user's
system.

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -20,7 +20,7 @@ and drop us a bug report!
 
 # Try It!
 
-### `cd project && coala --files=\*\*/\*.c --bears=ClangBear,IndentBear --save`
+### `cd project && coala --files=\*\*/\*.py --bears=PEP8Bear --save`
 
 ### Your configuration will be automatically saved to the `.coafile` in the current directory. Use `coala -A` to see what bears are available.
 
