Add tutorial link

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -35,3 +35,5 @@ and drop us a bug report!
 # Tell Us What You Think!
 
 ### Simply join our channel at <https://gitter.im/coala-analyzer/coala>! We'd love to speak to you!
+
+### Look at <http://coala.readthedocs.org/en/latest/Users/Tutorial/> for a deeper introduction.
