Add note about editor plugins

--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -15,5 +15,10 @@ style: center
 And of course, coala works on **Linux**, **Windows** and **Mac**! Just make sure
 to use **Python 3**.
 
+You can also execute coala right from your editor. Check out
+<https://github.com/coala-analyzer/coala-gedit>,
+<https://github.com/coala-analyzer/coala-atom> or
+<https://github.com/coala-analyzer/coala-sublime>.
+
 If you want to use coala to automatically review pull requests, consider using
 [GitMate](http://gitmate.com/). Please mind that GitMate is a prototype.
