remove unneeded escapes

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -23,7 +23,7 @@ You can install coala without any bears, just the bare framework, with
 
 # Try It!
 
-### `cd project && coala --files=\*\*/\*.py --bears=PEP8Bear --save`
+### `cd project && coala --files="**/*.py" --bears=PEP8Bear --save`
 
 ### Your configuration will be automatically saved to the `.coafile` in the current directory. Use `coala -A` to see what bears are available.
 
