--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -25,7 +25,7 @@ You can install coala without any bears, just the bare framework, with
 
 ### `cd project && coala --files="**/*.py" --bears=PEP8Bear --save`
 
-### Your configuration will be automatically saved to the `.coafile` in the current directory. Use `coala -A` to see what bears are available.
+### Your configuration will be automatically saved to the `.coafile` in the current directory. Use `coala -A` to see what bears are available. Bears can be installed as pip packages.
 
 -------------------------
 
