remove --pre from nstall instreuctoins

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -8,13 +8,7 @@ style: center
 
 # Get It!
 
-### `sudo pip3 install coala-bears --pre`
-
-Because of the huge advances the project does every day, we recommend installing
-the current prerelease by using the `--pre` flag like indicated above . We go to
-great lengths to ensure our master branch is stable at every time on all
-platforms. If you still hit problems, try the tutorial without the `--pre` flag
-and drop us a bug report!
+### `sudo pip3 install coala-bears`
 
 You can install coala without any bears, just the bare framework, with
 `sudo pip3 install coala --pre`.
