install coala remove pre

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -11,7 +11,7 @@ style: center
 ### `sudo pip3 install coala-bears`
 
 You can install coala without any bears, just the bare framework, with
-`sudo pip3 install coala --pre`.
+`sudo pip3 install coala`.
 
 -------------------------
 
