intro: Add link to languages

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -8,3 +8,5 @@ style: center
 # coala - COde AnaLysis Application
 
 ### Our goal is to make code analysis easy while remaining completely modular, extensible and language independent.
+
+#### See what languages we support currently apart from our generic algorithms at <https://github.com/coala-analyzer/coala-bears/wiki/Supported-languages>
