intro: Add asciinema embed (#25)
Add https://asciinema.org/a/42945?speed=2 to the intro
page.

Fixes https://github.com/coala-analyzer/website/issues/24

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -7,6 +7,8 @@ style: center
 
 # coala - COde AnaLysis Application
 
+<script type="text/javascript" src="https://asciinema.org/a/42945.js" id="asciicast-42945" async></script>
+
 ### Our goal is to make code analysis easy while remaining completely modular, extensible and language independent.
 
 #### See what languages we support currently apart from our generic algorithms at <https://github.com/coala-analyzer/coala-bears/wiki/Supported-languages>
