--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -7,7 +7,7 @@ style: center
 
 # coala - COde AnaLysis Application
 
-<script type="text/javascript" src="https://asciinema.org/a/42945.js" id="asciicast-42945" async></script>
+<script type="text/javascript" src="https://asciinema.org/a/42945.js" id="asciicast-42945" async data-speed="2" data-loop="1" data-autoplay="1"></script>
 
 ### Our goal is to make code analysis easy while remaining completely modular, extensible and language independent.
 
