Remove acronym explanation
Related #22

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,7 +5,7 @@ color: black
 style: center
 ---
 
-# coala - COde AnaLysis Application
+# coala
 
 <script type="text/javascript" src="https://asciinema.org/a/42945.js" id="asciicast-42945" async data-speed="2" data-loop="1" data-autoplay="1"></script>
 
