Add link list on top

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -7,6 +7,18 @@ style: center
 
 # coala
 
+[Issue Tracker](http://bugs.coala-analyzer.org/)
+&mdash;
+[Code](http://git.coala-analyzer.org/)
+&mdash;
+[Docs](http://docs.coala-analyzer.org/)
+&mdash;
+[FAQ](https://github.com/coala-analyzer/coala/wiki/FAQ)
+&mdash;
+[Blog](http://planet.coala-analyzer.org/)
+&mdash;
+[Donate](http://donate.coala-analyzer.org)
+
 <script type="text/javascript" src="https://asciinema.org/a/42945.js" id="asciicast-42945" async data-speed="2" data-loop="1" data-autoplay="1"></script>
 
 ### Our goal is to make code analysis easy while remaining completely modular, extensible and language independent.
