Add total contributor count to the team page
Fixes https://github.com/coala-analyzer/website/issues/32

--- a/_posts/2000-01-07-theteam.md
+++ b/_posts/2000-01-07-theteam.md
@@ -5,6 +5,8 @@ fa-icon: users
 color: white
 ---
 
+<h4>Join the team of <span id="contributor-count">70</span> contributors.</h4>
+
 #### You can [contribute to coala](https://github.com/coala-analyzer/coala) on Github by creating pull requests or submiting issues.
 
 <div id="contributors" class="clearfix">
