Change docs link to use HTTPS instead of HTTP

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -33,4 +33,4 @@ You can install coala without any bears, just the bare framework, with
 
 ### Simply join our channel at <https://gitter.im/coala-analyzer/coala>! We'd love to speak to you!
 
-### Look at <http://coala.readthedocs.org/en/latest/Users/Tutorials/Tutorial.html> for a deeper introduction.
+### Look at <https://coala.readthedocs.org/en/latest/Users/Tutorials/Tutorial.html> for a deeper introduction.
