intro: Make fonts consistent

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -23,4 +23,4 @@ style: center
 
 ### Our goal is to make code analysis easy while remaining completely modular, extensible and language independent.
 
-## Browse supported languages at <https://github.com/coala-analyzer/bear-docs/>
+### Browse supported languages at <https://github.com/coala-analyzer/bear-docs/>
