Add supported languages link

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -7,6 +7,8 @@ style: center
 
 # coala
 
+[Supported Languages](https://github.com/coala-analyzer/bear-docs/)
+&mdash;
 [Issue Tracker](http://bugs.coala-analyzer.org/)
 &mdash;
 [Code](http://git.coala-analyzer.org/)
