intro: Add trigger sentence

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -23,6 +23,6 @@ style: center
 
 <script type="text/javascript" src="https://asciinema.org/a/42968.js" id="asciicast-42968" async data-loop="1" data-autoplay="1"></script>
 
-### Our goal is to make code analysis easy while remaining completely modular, extensible and language independent.
+### coala provides a common command-line interface for linting and fixing all your code, regardless of the programming languages you use.
 
 ### Browse supported languages at <https://github.com/coala-analyzer/bear-docs/>
