--- a/_posts/2000-01-09-calendar.md
+++ b/_posts/2000-01-09-calendar.md
@@ -9,5 +9,5 @@ color: white
 
 ### We'd love to share a bar of chocolate with you!
 
-<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=hl3j7971mhoo6rhfkn3fcf5afk%40group.calendar.google.com&amp;color=%23875509&amp;ctz=Europe%2FBerlin" style="border-width:0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;mode=AGENDA&amp;height=400&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=hl3j7971mhoo6rhfkn3fcf5afk%40group.calendar.google.com&amp;color=%23875509&amp;src=jpmh8lq7evpptl8hmul9vfh267k1ab4i%40import.calendar.google.com&amp;color=%235F6B02&amp;ctz=Europe%2FBerlin" style="border-width:0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
 
