Add sponsors and partners

--- a/_posts/2000-01-10-donate.md
+++ b/_posts/2000-01-10-donate.md
@@ -1,5 +1,5 @@
 ---
-title: "donate"
+title: "sponsors/donate"
 bg: '#2c3e50'
 fa-icon: dollar
 color: white
@@ -10,4 +10,12 @@ style: center
 
 ### coala uses free software for recurrent donations. We support many projects we use upstream by code mostly written in our freetime and pay servers out of our own pocket. Any donation is deeply appreciated and helps us focusing on even better code.
 
-## For single amount donations contact <lasse.schuirmann@gmail.com> or consider sponsoring a GitHub issue through <https://www.bountysource.com/teams/coala/>.
+### For single amount donations and sponsorship opportunities contact <lasse.schuirmann@gmail.com>.
+
+# Sponsors
+
+[![AppVeyor](img/appv.png)](http://appveyor.com/)
+
+# Partners
+
+[![Remote Meetup](img/remotemeetup.png)](http://remotemeetup.com/)
