Add digitalocean logo

--- a/_posts/2000-01-10-donate.md
+++ b/_posts/2000-01-10-donate.md
@@ -16,6 +16,8 @@ style: center
 
 [![AppVeyor](img/appv.png)](http://appveyor.com/)
 
+[![DigitalOcean](img/digitalocean.png)](https://www.digitalocean.com/)
+
 # Partners
 
 [![Remote Meetup](img/remotemeetup.png)](http://remotemeetup.com/)
