error link correction

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -13,7 +13,7 @@ style: center
 You can install coala without any bears, just the bare framework, with
 `sudo pip3 install coala`.
 
-If the installation doesn't work for you, check out <http://coala.readthedocs.io/en/latest/Users/Install.html#error-handling>.
+If the installation doesn't work for you, check out <http://coala.readthedocs.io/en/latest/Users/Install.html#installation-errors>.
 
 -------------------------
 
