correct link redirects

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -11,7 +11,7 @@ style: center
 &mdash;
 [Issue Tracker](http://bugs.coala-analyzer.org/)
 &mdash;
-[Code](http://git.coala-analyzer.org/)
+[Code](https://github.com/coala-analyzer/coala)
 &mdash;
 [Docs](http://docs.coala-analyzer.org/)
 &mdash;
