--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -21,4 +21,4 @@ You can also execute coala right from your editor. Check out
 <https://github.com/coala-analyzer/coala-sublime>.
 
 If you want to use coala to automatically review pull requests, consider using
-[GitMate](http://gitmate.com/). Please mind that GitMate is a prototype.
+[GitMate](http://gitmate.io/). Please mind that GitMate is a prototype.
