--- a/_posts/2000-01-10-donate.md
+++ b/_posts/2000-01-10-donate.md
@@ -14,7 +14,7 @@ style: center
 
 # Sponsors
 
-[![AppVeyor](img/appv.png)](http://appveyor.com/)
+[![AppVeyor](img/appv.png)](https://www.appveyor.com/)
 
 [![DigitalOcean](img/digitalocean.png)](https://www.digitalocean.com/)
 
