Rework intro links g

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -7,13 +7,13 @@ style: center
 
 # coala
 
-[Supported Languages](https://github.com/coala-analyzer/bear-docs/)
+[Supported Languages](https://coala.io/languages)
 &mdash;
 [Issue Tracker](http://bugs.coala-analyzer.org/)
 &mdash;
 [Code](https://github.com/coala-analyzer/coala)
 &mdash;
-[Docs](http://docs.coala-analyzer.org/)
+[Docs](https://docs.coala.io/)
 &mdash;
 [FAQ](https://github.com/coala-analyzer/coala/wiki/FAQ)
 &mdash;
@@ -25,4 +25,4 @@ style: center
 
 ### coala provides a common command-line interface for linting and fixing all your code, regardless of the programming languages you use.
 
-### Browse supported languages at <https://github.com/coala-analyzer/bear-docs/>
+### [Browse supported languages](https://coala.io/languages)
