Update all lnks

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -13,7 +13,7 @@ style: center
 You can install coala without any bears, just the bare framework, with
 `sudo pip3 install coala`.
 
-If the installation doesn't work for you, check out <http://coala.readthedocs.io/en/latest/Users/Install.html#installation-errors>.
+If the installation doesn't work for you, check out [common errors documentation](http://coala.readthedocs.io/en/latest/Users/Install.html#installation-errors).
 
 -------------------------
 
@@ -21,7 +21,7 @@ If the installation doesn't work for you, check out <http://coala.readthedocs.io
 
 ### `cd project && coala --files="**/*.py" --bears=PEP8Bear --save`
 
-### Your configuration will be automatically saved to the `.coafile` in the current directory. Go to <https://github.com/coala-analyzer/bear-docs/blob/master/README.rst> to see what bears are available. Bears can be installed as pip packages.
+### Your configuration will be automatically saved to the `.coafile` in the current directory. Go to our [bear documentation](https://coala.io/languages) to see what bears are available. Bears can be installed as pip packages.
 
 -------------------------
 
@@ -33,6 +33,6 @@ If the installation doesn't work for you, check out <http://coala.readthedocs.io
 
 # Tell Us What You Think!
 
-### Simply join our channel at <https://gitter.im/coala-analyzer/coala>! We'd love to speak to you!
+### Simply join our channel at [Gitter](https://coala.io/chat)! We'd love to speak to you!
 
-### Look at <https://coala.readthedocs.io/en/latest/Users/Tutorials/Tutorial.html> for a deeper introduction.
+### Look at [our tutorial](https://coala.readthedocs.io/en/latest/Users/Tutorials/Tutorial.html) for a deeper introduction.
