--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -16,9 +16,10 @@ And of course, coala works on **Linux**, **Windows** and **Mac**! Just make sure
 to use **Python 3**.
 
 You can also execute coala right from your editor. Check out
-<https://github.com/coala-analyzer/coala-gedit>,
-<https://github.com/coala-analyzer/coala-atom> or
-<https://github.com/coala-analyzer/coala-sublime>.
+[our gedit](https://github.com/coala-analyzer/coala-gedit),
+[atom](https://github.com/coala-analyzer/coala-atom),
+[sublime](https://github.com/coala-analyzer/coala-sublime)
+and other plugins!
 
 If you want to use coala to automatically review pull requests, consider using
 [GitMate](http://gitmate.io/). Please mind that GitMate is a prototype.
