--- a/_posts/2000-01-07-theteam.md
+++ b/_posts/2000-01-07-theteam.md
@@ -7,7 +7,7 @@ color: white
 
 <h4>Join the team of <span id="contributor-count">70</span> contributors.</h4>
 
-#### You can [contribute to coala](https://github.com/coala-analyzer/coala) on Github by creating pull requests or submiting issues.
+#### You can [contribute to coala](https://github.com/coala-analyzer/coala) on Github by creating pull requests or submitting issues.
 
 <div id="contributors" class="clearfix">
   <div class="template contributor" style="display:none;">
@@ -17,7 +17,6 @@ color: white
   </div>
 </div>
 
-[View all
-contributors](https://github.com/coala-analyzer/coala/graphs/contributors)
+[View all contributors](https://github.com/coala-analyzer/coala/graphs/contributors)
 
 
