--- a/_posts/2000-01-10-donate.md
+++ b/_posts/2000-01-10-donate.md
@@ -6,11 +6,11 @@ color: white
 style: center
 ---
 
-# Donate at <https://gratipay.com/coala/>
+# Donate at [liberapay](https://liberapay.com/coala/)!
 
 ### coala uses free software for recurrent donations. We support many projects we use upstream by code mostly written in our freetime and pay servers out of our own pocket. Any donation is deeply appreciated and helps us focusing on even better code.
 
-### For single amount donations and sponsorship opportunities contact <lasse.schuirmann@gmail.com>.
+### For single amount donations and sponsorship opportunities contact <coala.analyzer@gmail.com>.
 
 # Sponsors
 
