--- a/_posts/2000-01-06-moreinfo.md
+++ b/_posts/2000-01-06-moreinfo.md
@@ -5,6 +5,6 @@ fa-icon: book
 color: white
 ---
 
-# Visit our documentation at <http://docs.coala-analyzer.org/>
+# Visit our [documentation](https://docs.coala.io)
 
-## ...or checkout the latest coala related news on <http://planet.coala-analyzer.org> and <https://twitter.com/coala_analyzer>.
+## ...or checkout the latest coala related news on [planet coala](http://planet.coala-analyzer.org) and [twitter](https://twitter.com/coala_analyzer).
