--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -7,6 +7,10 @@ style: center
 
 # coala
 
+## Linting and Fixing Code for All Languages
+
+### [Browse supported languages](https://coala.io/languages)
+
 [Supported Languages](https://coala.io/languages)
 &mdash;
 [Issue Tracker](http://bugs.coala-analyzer.org/)
@@ -22,7 +26,3 @@ style: center
 [Donate](http://donate.coala-analyzer.org)
 
 <script type="text/javascript" src="https://asciinema.org/a/42968.js" id="asciicast-42968" async data-loop="1" data-autoplay="1"></script>
-
-### coala provides a common command-line interface for linting and fixing all your code, regardless of the programming languages you use.
-
-### [Browse supported languages](https://coala.io/languages)
