--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -9,7 +9,7 @@ style: center
 
 ## Linting and Fixing Code for All Languages
 
-### [Browse supported languages](https://coala.io/languages)
+### [Browse Supported Languages](https://coala.io/languages)
 
 [Supported Languages](https://coala.io/languages)
 &mdash;
