--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -13,7 +13,7 @@ style: center
 You can install coala without any bears, just the bare framework, with
 `sudo pip3 install coala`.
 
-If the installation doesn't work for you, check out [common errors documentation](http://coala.readthedocs.io/en/latest/Users/Install.html#installation-errors).
+If the installation doesn't work for you, check out [common errors documentation](https://docs.coala.io/en/latest/Users/Install.html#installation-errors).
 
 -------------------------
 
@@ -35,4 +35,4 @@ If the installation doesn't work for you, check out [common errors documentation
 
 ### Simply join our channel at [Gitter](https://coala.io/chat)! We'd love to speak to you!
 
-### Look at [our tutorial](https://coala.readthedocs.io/en/latest/Users/Tutorials/Tutorial.html) for a deeper introduction.
+### Look at [our tutorial](https://coala.io/tutorial) for a deeper introduction.
