--- a/_posts/2000-01-07-theteam.md
+++ b/_posts/2000-01-07-theteam.md
@@ -5,7 +5,7 @@ fa-icon: users
 color: white
 ---
 
-<h4>Join the team of <span id="contributor-count">70</span> contributors.</h4>
+<h4>Join the team of more than <span id="contributor-count">170</span> contributors.</h4>
 
 #### You can [contribute to coala](https://github.com/coala-analyzer/coala) on Github by creating pull requests or submitting issues.
 
@@ -17,6 +17,5 @@ color: white
   </div>
 </div>
 
-[View all contributors](https://github.com/coala-analyzer/coala/graphs/contributors)
-
+[View core contributors](https://github.com/coala-analyzer/coala/graphs/contributors)
 
