--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -10,7 +10,7 @@ style: center
 
 # Just Execute `coala`
 
-### Right where your `.coafile` lies.
+### Right where your `.coafile` lies. For non interactive/continuous integration, use the `coala-ci` binary.
 
 And of course, coala works on **Linux**, **Windows** and **Mac**! Just make sure
 to use **Python 3**.
